--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,8 +7,10 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "framer-motion": "^12.6.2",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-icons": "^5.5.0",
         "react-markdown": "^10.1.0",
         "react-router-dom": "^6.8.0",
         "remark-gfm": "^4.0.1"
