--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,8 @@
         "remark-gfm": "^4.0.1"
     },
     "devDependencies": {
+        "@tailwindcss/forms": "^0.5.10",
+        "@tailwindcss/typography": "^0.5.16",
         "@vitejs/plugin-react": "^3.0.0",
         "autoprefixer": "^10.4.21",
         "postcss": "^8.5.3",
